objects/Idea.object
<CustomObject>
    <fields>
        <fullName>Age_Days__c</fullName>
        <description>How many days it&apos;s been since this Idea was created.</description>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SD person who is responsible to oversee consideration and possible implementation of this idea.</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <description>Based on the current status, is this idea open or closed?</description>
        <formula>CASE( Status , &quot;Now Available&quot;, &quot;Yes&quot;,
 &quot;Rejected&quot;, &quot;Yes&quot;,
 &quot;Already Implemented&quot;, &quot;Yes&quot;,
 &quot;Maybe Later&quot;, &quot;Yes&quot;,
 &quot;Under Consideration&quot;, &quot;No&quot;,
 &quot;Coming Soon&quot;, &quot;No&quot;,
 &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closure_Reason__c</fullName>
        <description>Explanation about how the Idea was closed (how it was implemented, why it was rejected, etc).</description>
        <label>Closure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <description>Date on which this idea&apos;s status was moved to &quot;Implemented!&quot;. Populated via workflow.</description>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Most ideas come via direct web input. Some ideas are bulk-loaded from certain events or other sources.</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Ideas_Last_7_Days</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <columns>IDEA.IDEA_THEME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Last 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Open_Ideas</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IDEA.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Ideas</label>
        <language>en_US</language>
        <sharedTo>
            <group>PlatformAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PartnerLink</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>COMMUNITY.NAME</field>
            <operation>equals</operation>
            <value>PartnerLink</value>
        </filters>
        <filters>
            <field>IDEA.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>PartnerLink</label>
        <language>en_US</language>
        <sharedTo>
            <group>Danfoss_PS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PartnerLink_Open_Ideas</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>COMMUNITY.NAME</field>
            <operation>equals</operation>
            <value>PartnerLink</value>
        </filters>
        <filters>
            <field>IDEA.STATUS</field>
            <operation>equals</operation>
            <value>Open,Under Consideration,Coming Soon</value>
        </filters>
        <label>PartnerLink Open Ideas</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Power_Solutions_Segment_Open_Ideas</fullName>
        <columns>IDEA.CREATED_DATE</columns>
        <columns>IDEA.TITLE</columns>
        <columns>IDEA.CREATED_BY_NICKNAME</columns>
        <columns>VOTE_STATS.WEIGHTED_SUM</columns>
        <columns>IDEA.NUM_COMMENTS</columns>
        <columns>IDEA.STATUS</columns>
        <columns>IDEA.CATEGORIES</columns>
        <columns>COMMUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>COMMUNITY.NAME</field>
            <operation>equals</operation>
            <value>Danfoss Power Solutions Segment</value>
        </filters>
        <label>Power Solutions Segment Open Ideas</label>
        <language>en_US</language>
        <sharedTo>
            <group>Comatrol</group>
            <group>Danfoss_PS</group>
            <group>PlatformAdmin</group>
            <group>Turolla</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>InternalIdeasIdeaRecordType</fullName>
        <active>true</active>
        <description>Record Type used to associate ideas with a specific community</description>
        <label>Internal Community: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09aC000000015MfIAI_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>PartnerLink: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09aC000000015MzIAI_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific community</description>
        <label>MyComatrol: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09aC000000017uXIAQ_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific zone</description>
        <label>Danfoss Power Solutions Segment: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09aC000000017ucIAA_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific zone</description>
        <label>Danfoss Cooling Segment: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09aC000000017uhIAA_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific zone</description>
        <label>Danfoss Drives Segment: Idea Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09aC000000017umIAA_entity_Idea</fullName>
        <active>true</active>
        <description>Record type used to associate Idea with a specific zone</description>
        <label>Danfoss Heating Segment: Idea Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>